Project is Completed

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <div class="container">
 <button class="btn">Click ME To change colour</button>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
